2006-03-13  Jie Zhang <jie.zhang@analog.com>

	* config/bfin/uclinux.h: Define _GNU_SOURCE in CPLUSPLUS_CPP_SPEC.

2006-03-13  Bernd Schmidt  <bernd.schmidt@analog.com>

	* config/bfin/lib1funcs.asm (___umodsi3): Use stack to save contents
	of RETS.
	* config/bfin/bfin.h (TARGET_CPU_CPP_BUILTINS): If
	TARGET_ID_SHARED_LIBRARY, define __ID_SHARED_LIB__.
	* config/bfin/crti.S: Use it instead of __PIC__.
	* config/bfin/crtn.S: Likewise.

	* config/bfin/bfin.md (call_value_symbol, sibcall_value_symbol,
	call_symbol, sibcall_symbol): Disallow if TARGET_ID_SHARED_LIBRARY,
	not if flag_pic.
	Lose 'G' modifier for call operand.
	* config/bfin/bfin.c (print_operand) <case SYMBOL_REF>: Don't
	recognize 'G' modifier.

2006-03-13  Eric Botcazou  <ebotcazou@adacore.com>

	PR middle-end/18859
	* stmt.c (expand_case): Discard empty ranges.

2006-03-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	Backport:
	2005-03-31  Janis Johnson  <janis187@us.ibm.com>

	* doc/sourcebuild.texi (Test Directives): Describe cleanup-* procs.

2006-03-10  Mark Mitchell  <mark@codesourcery.com>

	* version.c: Bump version number.

	* doc/include/gcc-common.texi: Bump version number.

2006-03-09  Release Manager

	* GCC 4.0.3 released.

2006-03-06    Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/23706
	Backport from 4.1:
	* lcm.c (optimize_mode_switching): Clear transp bit for
	block with incomming abnormal edges.

	PR target/22553
	Backport from 4.1:
	* config/sh/sh.h (OPTIMIZATION_OPTIONS): Set flag_schedule_insns
	to 2 if it's already non-zero.
	(OVERRIDE_OPTIONS): Clear flag_schedule_insns if flag_exceptions
	is set and warn about it if flag_schedule_insns is 1.

2006-02-28  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/26092
	* gimplify.c (gimplify_call_expr): When trying again, call
	get_callee_fndecl first to verify it is still a builtin.

2005-02-28  Zdenek Dvorak  <dvorakz@suse.cz>

	PR c++/25632
	* init.c (constant_value_1): Unshare use of DECL_INITIAL.
